<resources>
    <string name="app_name">Mehna W Amal</string>


    <string name="facebook_app_id">773585460253860</string>
    <string name="fb_login_protocol_scheme">fb773585460253860</string>


    <string name="next">next</string>
    <string name="error_splash_screen">Sorry!</string>
    <string name="our_expertise_is_in_your_hands">Our expertise is in your hands</string>
    <string name="sign_up">Sign up</string>
    <string name="are_you">Are you?</string>
    <string name="artistic">Artistic</string>
    <string name="user">User</string>
    <string name="skip">Skip</string>
    <string name="individual">Individual</string>
    <string name="company">Company</string>
    <string name="register_your_details">Register your details</string>
    <string name="authenticating">Authenticating</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="age_minimum_15_years">Age (minimum 15 years)</string>
    <string name="e_mail">E-mail</string>
    <string name="governorate">State</string>
    <string name="city">City</string>
    <string name="or_register_with">or register with</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="enter_valid_emails">Enter Valid Email</string>
    <string name="valid_name">The name must contain at least 5 characters</string>
    <string name="valid_phone">Enter Valid Phone</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="select_your_profession">Select your profession</string>
    <string name="registration_of_individuals">Registration of individuals</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="experience">Experience</string>
    <string name="occupation">Job</string>
    <string name="permanence_type">permanence type</string>
    <string name="full_time">Full time</string>
    <string name="part_time">part time</string>
    <string name="do_you_have_a_professional_license">Do you have a professional license</string>
    <string name="reload_page">Reload page</string>
    <string name="place_of_residence">Place of residence</string>
    <string name="desire_to_work">Desire to work</string>
    <string name="local">local</string>
    <string name="inside_the_city">inside the city</string>
    <string name="international">international</string>
    <string name="salary">salary</string>
    <string name="optional">(optional)</string>
    <string name="clock">Clock</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="resume">Resume</string>
    <string name="upload_your_cv_optional">Upload your CV (Optional)</string>
    <string name="hold_a_profession_license_if_any">Hold a profession license (if any)</string>
    <string name="agree_to_the_terms_and_conditions">Agree to the terms and conditions</string>
    <string name="current_location">Current Location</string>
    <string name="required_location">Permission required for showing location</string>
    <string name="company_registration">Sign Up Companies</string>
    <string name="company_name">Company Name</string>
    <string name="commercial_registration_no">Commercial Registration No</string>
    <string name="commercial_activities">commercial activities</string>
    <string name="cell_phone">cell phone</string>
    <string name="fixed_phone">Fixed phone</string>
    <string name="website">website(optional)</string>
    <string name="logo_optional">Logo (optional)</string>
    <string name="sectors">Sectors</string>
    <string name="available_sectors">Available sectors</string>
    <string name="category_selection">Category selection</string>
    <string name="select_your_location">Select your location</string>
    <string name="give_your_rating">give your rating</string>
    <string name="orders">orders</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="available">Available</string>
    <string name="websites">website</string>
    <string name="previous_contracts">previous Contracts</string>
    <string name="current_contracts">Current Contracts</string>
    <string name="required_service">Required service:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_commercial_no">Edit Commercial Registration No</string>
    <string name="edit_commercial_activities">Edit Commercial Activities</string>
    <string name="edit_email">Edit Email</string>
    <string name="edit_phone">Edit Phone Number</string>
    <string name="edit_city">Edit City</string>
    <string name="sign_up_users">Sign Up Users</string>
    <string name="country">Country</string>
    <string name="select_country">Select Country</string>
    <string name="select_city">Select City</string>
    <string name="select_governorate">Select State</string>
    <string name="password">Password</string>
    <string name="valid_pass">Enter Valid Password</string>
    <string name="valid_commercial_no">Enter a valid commercial registration number</string>
    <string name="not_empty">This field must not be empty</string>
    <string name="select_picture">Select Picture</string>
    <string name="not_selected">not_selected</string>
    <string name="selected">selected</string>
    <string name="you_must_agree_terms_and_conditions">You must agree terms and conditions.</string>
    <string name="rating">Rating</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">NavigationDrawerOpen</string>
    <string name="navigation_drawer_close">NavigationDrawerClose</string>
    <string name="categories_list">Categories List</string>
    <string name="choose_one_or_more_categories">Choose one or more categories</string>
    <string name="total_amount">Total amount</string>
    <string name="valid_info">Enter your information correctly</string>
    <string name="choose_at_least_one_category">Choose at least one category</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="settings">Settings</string>
    <string name="nationality">Nationality</string>
    <string name="select_nationality">Select Nationality</string>
    <string name="complete_the_payment_process_to_activate_the_account">Complete the payment process to activate the account</string>
    <string name="info_updated">Update information</string>
    <string name="jop">Jop</string>


    <string-array name="languages">
        <item>English</item>
        <item>Arabic</item>
    </string-array>


</resources>