<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.fikrabd.mehna_w_amal.select_type.SelectActivity" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".select_type.SelectActivity">


        <Button
            android:id="@+id/artistic"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:background="@drawable/btn_login"
            android:backgroundTint="@color/thirdBaseColor"
            android:fontFamily="@font/kufi_bold"
            android:text="@string/artistic"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:tag="is_artistic"
            android:onClick="@{(view) -> activity.isArtistic()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/user"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:background="@drawable/btn_login"
            android:fontFamily="@font/kufi_bold"
            android:text="@string/user"
            android:textAllCaps="false"
            android:backgroundTint="@color/baseColor"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:tag="is_user"
            android:onClick="@{(view) -> activity.isUser()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artistic" />

        <Button
            android:id="@+id/individual"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login"
            android:backgroundTint="@color/baseColor"
            android:fontFamily="@font/kufi_bold"
            android:layout_marginTop="@dimen/space_10"
            android:onClick="@{(view) -> activity.isIndividual()}"
            android:tag="is_user"
            android:text="@string/individual"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user" />

        <Button
            android:id="@+id/company"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login"
            android:backgroundTint="@color/baseColor"
            android:layout_marginTop="@dimen/space_10"
            android:fontFamily="@font/kufi_bold"
            android:onClick="@{(view) -> activity.isCompany()}"
            android:tag="is_user"
            android:text="@string/company"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/individual" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:gravity="center"
            android:text="@string/are_you"
            android:textSize="18sp"
            android:fontFamily="@font/kufi_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:background="@drawable/btn_login"
            android:backgroundTint="@color/grey_10"
            android:fontFamily="@font/kufi_regular"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>