<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >

    <data>
        <import type="android.view.View" />

        <import type="android.view.ViewGroup" />
        <variable
            name="presenter"
            type="com.fikrabd.mehna_w_amal.home.MainPresenter" />

        <variable
            name="fragment"
            type="com.fikrabd.mehna_w_amal.home.fragment.ContractsFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/login_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/baseColor"
                android:theme="@style/MyToolBar"
                >

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sectors"
                    android:textSize="16sp"
                    android:fontFamily="@font/kufi_bold"
                    android:layout_gravity="center" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/baseColor"
           android:layout_marginEnd="@dimen/space_20"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginTop="@dimen/space_20">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="@dimen/space_20"
                android:text="@string/commercial_activities"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginEnd="@dimen/space_20">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_contracts"
                android:background="@drawable/btn_contracts"
                android:backgroundTint="@color/thirdBaseColor"
                android:textColor="@color/white"
                android:fontFamily="@font/kufi_bold"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous_contracts"
                android:layout_weight="1"
                android:background="@drawable/btn_contracts1"
                android:backgroundTint="@color/thirdBaseColor"
                android:textColor="@color/white"
                android:fontFamily="@font/kufi_bold"
                android:textAllCaps="false"/>



        </LinearLayout>


        <FrameLayout
            android:id="@+id/frame_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >


            <include
                android:id="@+id/loading"
                layout="@layout/loading"
                android:visibility="@{presenter.loading ? View.VISIBLE : View.GONE , default = gone}" />

            <com.mlsdev.animatedrv.AnimatedRecyclerView
                android:id="@+id/recyclerview_categories"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_gravity="center"
                android:padding="@dimen/space_30"
                android:layout_marginBottom="70dp"
                android:layout_marginTop="@dimen/space_40"
                android:orientation="vertical"
                android:requiresFadingEdge="vertical"
                app:animationDuration="600"
                app:layoutAnimation="@anim/layout_animation_from_bottom_scale"
                app:layoutManagerOrientation="vertical"
                app:layoutManagerReverse="false"
                app:layoutManagerType="linear" />



            <me.ibrahimsn.lib.SmoothBottomBar
                android:id="@+id/bottomBar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_nav_height"
                android:layout_gravity="bottom"
                app:backgroundColor="@color/baseColor"
                app:iconSize="@dimen/space_30"
                app:itemFontFamily="@font/kufi_regular"
                app:menu="@menu/main_menu"
                app:textSize="0sp"
                />

        </FrameLayout>

    </LinearLayout>

</layout>